@@ -200,7 +200,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
     </columns>
   </object>
   <object class="GtkAdjustment" id="xbayeroff_adj">
-    <property name="upper">1</property>
+    <property name="upper">5</property>
     <property name="step-increment">1</property>
     <property name="page-increment">1</property>
   </object>
@@ -211,7 +211,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
     <property name="page-increment">1</property>
   </object>
   <object class="GtkAdjustment" id="ybayeroff_adj">
-    <property name="upper">1</property>
+    <property name="upper">5</property>
     <property name="step-increment">1</property>
     <property name="page-increment">1</property>
   </object>
